--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,129 @@
 .main {
   background: #013569;
+
   color: white;
 }
 
-.ag-header-cell-label .ag-header-cell-text {
-  white-space: pre-wrap !important;
+.rg-cell {
+  color: rgb(32, 44, 74) !important;
+
+  letter-spacing: 0.24px !important;
+
+  line-height: 14px !important;
+
+  font-size: 12px !important;
 }
+
+.rg-pane-left {
+  color: rgb(32, 44, 74) !important;
+
+  font-weight: bold !important;
+}
+
+.rg-header-cell {
+  white-space: pre-wrap !important;
+
+  text-align: center !important;
+
+  justify-content: center !important;
+
+  color: rgb(32, 44, 74) !important;
+
+  font-weight: bold !important;
+
+  letter-spacing: 0.24px !important;
+
+  line-height: 14px !important;
+
+  font-size: 12px !important;
+}
+
+.reactgrid {
+  height: 50vh;
+
+  max-height: 50vh;
+}
+
+.rg-header-cell {
+  border: 1px solid gray !important;
+
+  font-weight: bold !important;
+}
+
+.rg-pane-left .rg-cell {
+  border: 1px solid gray !important;
+}
+
+/* width */
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+
+  border-radius: 10px;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: #013569;
+
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+  background: #013569;
+}
+
+.anamolous-mark {
+  position: absolute;
+
+  right: 14px;
+}
+
+.lock {
+  position: absolute;
+
+  right: 44px;
+}
+
+.lock-icon {
+  position: absolute;
+
+  right: 25px;
+}
+
+.dots {
+  position: absolute;
+
+  right: 8px;
+}
+
+.rg-celleditor {
+  border-width: 0px !important;
+
+  padding: 0 0px !important;
+
+  border: 0.2px solid rgb(121, 64, 186) !important;
+}
+
+[data-cell-colidx~='54'] {
+  border-left: 2px solid black !important;
+}
+
+/* .reactgrid-content {
+
+  width: auto !important;
+
+  height: auto !important;
+
+  overflow: auto !important;
+
+} */
